# context-rag

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  GEMINI.md  LICENSE  README.md  SMOKE.md  pyproject.toml
scripts/: install.py
src/context_rag/: __init__.py  chunker.py  cli.py  embeddings.py  indexer.py  pseudonyms.py  query.py  server.py
tests/: test_chunker.py  test_e2e.py  test_embeddings.py  test_import.py  test_indexer.py  test_install_claude_desktop.py  test_install_script.py  test_no_download.py  test_pseudonyms_query.py  test_query.py  test_server.py
