[project]
name = "context-rag"
version = "0.1.0"
description = "standalone hybrid RAG (BM25+dense+RRF) over markdown corpora"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",
  "numpy>=1.26",
  "sentence-transformers>=2.7.0",
  "sqlite-vec>=0.1.6",
]

[project.scripts]
context-rag = "context_rag.cli:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
pythonpath = ["src"]
